--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -128,7 +128,7 @@ body, html {
 .hero-section {
   position: relative;
   height: 100vh;
-  background-image: url('images/slider1.jpg');
+  background-image: url('/images/slider1.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
